--- a/knn.ipynb
+++ b/knn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkebVsPH6TtX58qCZiKgNf",
+      "authorship_tag": "ABX9TyMcidwpP3tExZ0RkzvFJdHC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,8 +39,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.datasets import load_iris\n",
-        "X, y = load_iris(return_X_y=True)\n",
-        "# TODO: what is ndarray?"
+        "X, y = load_iris(return_X_y=True)"
       ],
       "metadata": {
         "id": "-qg8SyVWsoPc"
