--- a/Autograd.ipynb
+++ b/Autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEK4C4cPE3I9sh6OGsuEjB",
+      "authorship_tag": "ABX9TyN2ZCTdZlZlL60Mlr0L+tei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "2fOocBccJPhg"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -52,25 +52,36 @@
         "class Layer:\n",
         "    def __init__(self, input_dimension, output_dimension):\n",
         "        self.input = None\n",
+        "        self.Z = None\n",
+        "        self.A = None\n",
         "        self.weights = np.random.randn(input_dimension,output_dimension)\n",
         "        self.bias = np.random.randn(1,output_dimension)\n",
+        "        self.weights_gradient = None\n",
+        "        self.bias_gradient = None\n",
         "\n",
         "    def forward(self, input):\n",
         "        self.input = input\n",
-        "        return self.__sigmoid(np.dot(self.input, self.weights) + self.bias)\n",
+        "        self.Z = np.dot(self.input, self.weights) + self.bias\n",
+        "        self.A = self.__sigmoid(self.Z)\n",
+        "        return self.A\n",
         "\n",
         "\n",
         "    def __sigmoid(self, x):\n",
         "        return 1 / (1 + np.exp(-x))\n",
         "\n",
-        "    def compute_gradient(self, output_gradient):0\n",
-        "        # TODO\n",
-        "        raise NotImplementedError"
+        "    def compute_gradient(self, A_gradient):\n",
+        "        Z_gradient = A_gradient * self.A * (1 - self.A)\n",
+        "\n",
+        "        self.weights_gradient = np.dot(self.input.T, Z_gradient)\n",
+        "        self.bias_gradient = np.sum(Z_gradient, axis=0, keepdims=True)\n",
+        "\n",
+        "        input_gradient = np.dot(Z_gradient, self.weights.T)\n",
+        "        return input_gradient"
       ],
       "metadata": {
         "id": "SAg2dWRNG_Z9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -96,26 +107,58 @@
         "    output = self.forward(input)\n",
         "    return np.round(output - 0.5)\n",
         "\n",
-        "  def compute_gradient(self, output_gradient):\n",
-        "        raise NotImplementedError"
+        "  def compute_gradient(self, A_gradient):\n",
+        "    for layer in reversed(self.layers):\n",
+        "        A_gradient = layer.compute_gradient(A_gradient)\n",
+        "\n",
+        "  def update_weights(self, learning_rate):\n",
+        "    for layer in self.layers:\n",
+        "        layer.weights -= learning_rate * layer.weights_gradient\n",
+        "        layer.bias -= learning_rate * layer.bias_gradient\n"
       ],
       "metadata": {
         "id": "oLMhshEWINFB"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "class CrossEntropyLoss:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
         "\n",
-        "def loss(y_pred, y_true):\n",
-        "  return -1 * np.mean(np.multiply(y_true, np.log(y_pred)) + np.multiply((1 - y_true), np.log(1 - y_pred)))"
+        "  def loss(self, y_pred, y_true):\n",
+        "    return -1 * np.mean(np.multiply(y_true, np.log(y_pred)) + np.multiply((1 - y_true), np.log(1 - y_pred)))\n",
+        "\n",
+        "  def gradient(self, y_pred, y_true):\n",
+        "    # TODO\n",
+        "    return -1 * (y_true / y_pred - (1 - y_true) / (1 - y_pred))"
       ],
       "metadata": {
         "id": "EFJHLX_EJpTo"
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(mlp, X, y_true, epochs, learning_rate):\n",
+        "  loss = CrossEntropyLoss()\n",
+        "  for epoch in range(epochs):\n",
+        "    y_pred = mlp.forward(X)\n",
+        "    loss_value = loss.loss(y_pred, y_true)\n",
+        "    A_gradient = loss.gradient(y_pred, y_true)\n",
+        "    mlp.compute_gradient(A_gradient)\n",
+        "    mlp.update_weights(learning_rate)\n",
+        "    print(f\"Epoch {epoch + 1}/{epochs}, Loss: {loss_value}\")"
+      ],
+      "metadata": {
+        "id": "_5cbMgeeFQd-"
+      },
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,26 +167,31 @@
         "mlp = MLP(2, [2])\n",
         "X = np.array([[0, 0], [0, 1]])\n",
         "y_true = np.array([0, 1])\n",
-        "y_pred = mlp.forward(X)\n",
-        "print(y_pred)\n",
-        "print(loss(y_pred, y_true))\n"
+        "# TODO\n",
+        "train(mlp, X, y_true, epochs=1000, learning_rate=0.1)\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 304
         },
         "id": "cjfcpNbgIrcR",
-        "outputId": "a1140399-79a3-4f1a-c112-e52a9444fb42"
+        "outputId": "c1668296-08f0-4e15-9732-c2c7dae97930"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[0.76756311]\n",
-            " [0.81917874]]\n",
-            "0.908342588324677\n"
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "shapes (2,2) and (1,2) not aligned: 2 (dim 1) != 1 (dim 0)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-7-1245643866.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0my_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmlp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-4-2794170200.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(mlp, X, y_true, epochs, learning_rate)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mloss_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mA_gradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mmlp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_gradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mmlp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Epoch {epoch + 1}/{epochs}, Loss: {loss_value}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-2-2903660090.py\u001b[0m in \u001b[0;36mcompute_gradient\u001b[0;34m(self, A_gradient)\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mcompute_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA_gradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mlayer\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mA_gradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_gradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mupdate_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1-1798631787.py\u001b[0m in \u001b[0;36mcompute_gradient\u001b[0;34m(self, A_gradient)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias_gradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ_gradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0minput_gradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ_gradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0minput_gradient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: shapes (2,2) and (1,2) not aligned: 2 (dim 1) != 1 (dim 0)"
           ]
         }
       ]
